--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 
-<h1>This is my news site!</h1>
+<h1>This is news for me!</h1>
 
 <p>Hooray 🎉 - you've built this with <a href="https://github.com/netlify/victor-hugo">Victor-Hugo</a>!</p>
 
