--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -1,11 +1,11 @@
 {{ define "main" }}
 
-<h1>News 2 Me</h1>
+<h1>Pop Your News Bubble</h1>
 
 <div class="container">
 
-    {{% content "links.md" %}}
-    
+    {{% include "links.md" %}}
+
 </div>
 
 <a href="{{ "/tech" | relURL }}">Check out the tech</a>
