Finally got it.

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -4,6 +4,30 @@
 
 <div class="container">
 
+<h2>📰 Headlines</h2>
+
+<ul>
+    <li><a href="https://www.democracynow.org/">🗽 Democracy Now!</a></li>
+    <li><a href="https://www.propublica.org/">🔍 ProPublica</a></li>
+    <li><a href="https://theintercept.com/">📡 The Intercept</a></li>
+</ul> 
+
+<h2>🦠 COVID</h2>
+
+<ul>
+    <li><a href="https://www.nature.com/articles/d41586-020-00502-w">COVID Headlines from Nature.com</a></li>
+    <li><a href="https://www.cochranelibrary.com/covid-19">Cochrane Library</a></li>
+    <li><a href="https://www.mediterranee-infection.com/tout-sur-le-coronavirus/">IHU Marseille Website</a></li>
+    <li><a href="https://www.youtube.com/channel/UCFaPzuoXcACu7jplePDfXmA">IHU Marseille Youtube Channel</a></li>
+    <li><a href="https://thevaccinereaction.org/vaccination/">The Vaccine Reaction</a></li>
+</ul> 
+
+<h2>🎙 Podcasts</h2>
+
+<h2>✊🏽 Anarchism</h2>
+
+<h2>🧅 Fun</h2>
+
 </div>
 
 <a href="{{ "/tech" | relURL }}">Check out the tech</a>
