--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -2,31 +2,55 @@
 
 <h1>Pop Your News Bubble</h1>
 
-<div class="container">
+<div style="display: grid; grid-column-gap: 17px; grid-template-columns: auto auto auto;">
 
-<h2>📰 Headlines</h2>
+    <div>
 
-<ul>
-    <li><a href="https://www.democracynow.org/">🗽 Democracy Now!</a></li>
-    <li><a href="https://www.propublica.org/">🔍 ProPublica</a></li>
-    <li><a href="https://theintercept.com/">📡 The Intercept</a></li>
-</ul> 
+        <h2>📰 Headlines</h2>
 
-<h2>🦠 COVID</h2>
+        <p>
+            <ul style="text-align: left;">
+                <li><a href="https://www.democracynow.org/">🗽 Democracy Now!</a></li>
+                <li><a href="https://www.propublica.org/">🔍 ProPublica</a></li>
+                <li><a href="https://theintercept.com/">📡 The Intercept</a></li>
+            </ul>
+        </p> 
+        
+    </div>
 
-<ul>
-    <li><a href="https://www.nature.com/articles/d41586-020-00502-w">COVID Headlines from Nature.com</a></li>
-    <li><a href="https://www.cochranelibrary.com/covid-19">Cochrane Library</a></li>
-    <li><a href="https://www.mediterranee-infection.com/tout-sur-le-coronavirus/">IHU Marseille Website</a></li>
-    <li><a href="https://www.youtube.com/channel/UCFaPzuoXcACu7jplePDfXmA">IHU Marseille Youtube Channel</a></li>
-    <li><a href="https://thevaccinereaction.org/vaccination/">The Vaccine Reaction</a></li>
-</ul> 
+    <div>
 
-<h2>🎙 Podcasts</h2>
+        <h2>🦠 COVID</h2>
 
-<h2>✊🏽 Anarchism</h2>
+        <p>
+            <ul>
+                <li><a href="https://www.nature.com/articles/d41586-020-00502-w">COVID Headlines from Nature.com</a></li>
+                <li><a href="https://www.cochranelibrary.com/covid-19">Cochrane Library</a></li>
+                <li><a href="https://www.mediterranee-infection.com/tout-sur-le-coronavirus/">IHU Marseille Website</a></li>
+                <li><a href="https://www.youtube.com/channel/UCFaPzuoXcACu7jplePDfXmA">IHU Marseille Youtube Channel</a></li>
+                <li><a href="https://thevaccinereaction.org/vaccination/">The Vaccine Reaction</a></li>
+            </ul>
+        </p>
+        
+    </div>
 
-<h2>🧅 Fun</h2>
+    <div>
+
+        <h2>🎙 Podcasts</h2>
+
+    </div>
+
+    <div>
+
+        <h2>✊🏽 Anarchism</h2>
+
+    </div>
+
+    <div>
+
+        <h2>🧅 Fun</h2>
+
+    </div>
 
 </div>
 
