--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -2,53 +2,49 @@
 
 <h1>Pop Your News Bubble</h1>
 
-<div style="display: grid; grid-column-gap: 17px; grid-template-columns: auto auto auto;">
+<div class="grid-container">
 
-    <div>
+    <div class="grid-item">
 
-        <h2>📰 Headlines</h2>
+        <h3>📰 Headlines</h3>
 
-        <p>
-            <ul style="text-align: left;">
-                <li><a href="https://www.democracynow.org/">🗽 Democracy Now!</a></li>
-                <li><a href="https://www.propublica.org/">🔍 ProPublica</a></li>
-                <li><a href="https://theintercept.com/">📡 The Intercept</a></li>
-            </ul>
-        </p> 
+        <ul style="text-align: left;">
+            <li><a href="https://www.democracynow.org/">🗽 Democracy Now!</a></li>
+            <li><a href="https://www.propublica.org/">🔍 ProPublica</a></li>
+            <li><a href="https://theintercept.com/">📡 The Intercept</a></li>
+        </ul>
         
     </div>
 
-    <div>
+    <div class="grid-item">
 
-        <h2>🦠 COVID</h2>
+        <h3>🦠 COVID</h3>
 
-        <p>
-            <ul>
-                <li><a href="https://www.nature.com/articles/d41586-020-00502-w">COVID Headlines from Nature.com</a></li>
-                <li><a href="https://www.cochranelibrary.com/covid-19">Cochrane Library</a></li>
-                <li><a href="https://www.mediterranee-infection.com/tout-sur-le-coronavirus/">IHU Marseille Website</a></li>
-                <li><a href="https://www.youtube.com/channel/UCFaPzuoXcACu7jplePDfXmA">IHU Marseille Youtube Channel</a></li>
-                <li><a href="https://thevaccinereaction.org/vaccination/">The Vaccine Reaction</a></li>
-            </ul>
-        </p>
+        <ul style="text-align: left;">
+            <li><a href="https://www.nature.com/articles/d41586-020-00502-w">COVID Headlines from Nature.com</a></li>
+            <li><a href="https://www.cochranelibrary.com/covid-19">Cochrane Library</a></li>
+            <li><a href="https://www.mediterranee-infection.com/tout-sur-le-coronavirus/">IHU Marseille Website</a></li>
+            <li><a href="https://www.youtube.com/channel/UCFaPzuoXcACu7jplePDfXmA">IHU Marseille Youtube Channel</a></li>
+            <li><a href="https://thevaccinereaction.org/vaccination/">The Vaccine Reaction</a></li>
+        </ul>
         
     </div>
 
-    <div>
+    <div class="grid-item">
 
-        <h2>🎙 Podcasts</h2>
-
-    </div>
-
-    <div>
-
-        <h2>✊🏽 Anarchism</h2>
+        <h3>🎙 Podcasts</h3>
 
     </div>
 
-    <div>
+    <div class="grid-item">
 
-        <h2>🧅 Fun</h2>
+        <h3>✊🏽 Anarchism</h3>
+
+    </div>
+
+    <div class="grid-item">
+
+        <h3>🧅 Fun</h3>
 
     </div>
 
