--- a/site/layouts/_default/baseof.html
+++ b/site/layouts/_default/baseof.html
@@ -11,6 +11,7 @@
   {{ with $stylesheet.css }}
     <link href="{{ relURL . }}" rel="stylesheet">
   {{ end }}
+  <script src="https://kit.fontawesome.com/4f049b5392.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
