--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -6,45 +6,45 @@
 
     <div class="grid-item">
 
-        <h3>📰 Headlines</h3>
+        <h3><i class="fad fa-newspaper fa-fw"></i> Headlines</h3>
 
         <ul style="text-align: left;">
-            <li><a href="https://www.democracynow.org/">🗽 Democracy Now!</a></li>
-            <li><a href="https://www.propublica.org/">🔍 ProPublica</a></li>
-            <li><a href="https://theintercept.com/">📡 The Intercept</a></li>
+            <li><a href="https://www.democracynow.org/"><i class="fad fa-microphone fa-fw"></i> Democracy Now!</a></li>
+            <li><a href="https://www.propublica.org/"><i class="fad fa-search fa-fw"></i> ProPublica</a></li>
+            <li><a href="https://theintercept.com/"><i class="fad fa-satellite-dish fa-fw"></i> The Intercept</a></li>
         </ul>
         
     </div>
 
     <div class="grid-item">
 
-        <h3>🦠 COVID</h3>
+        <h3><i class="fad fa-viruses fa-fw"></i> COVID</h3>
 
         <ul style="text-align: left;">
-            <li><a href="https://www.nature.com/articles/d41586-020-00502-w">COVID Headlines from Nature.com</a></li>
-            <li><a href="https://www.cochranelibrary.com/covid-19">Cochrane Library</a></li>
-            <li><a href="https://www.mediterranee-infection.com/tout-sur-le-coronavirus/">IHU Marseille Website</a></li>
-            <li><a href="https://www.youtube.com/channel/UCFaPzuoXcACu7jplePDfXmA">IHU Marseille Youtube Channel</a></li>
-            <li><a href="https://thevaccinereaction.org/vaccination/">The Vaccine Reaction</a></li>
+            <li><a href="https://www.nature.com/articles/d41586-020-00502-w"><i class="fad fa-leaf fa-fw"></i> COVID Headlines from Nature.com</a></li>
+            <li><a href="https://www.cochranelibrary.com/covid-19"><i class="fad fa-book-medical fa-fw"></i> Cochrane Library</a></li>
+            <li><a href="https://www.mediterranee-infection.com/tout-sur-le-coronavirus/"><i class="fad fa-hospital fa-fw"></i> IHU Marseille Website</a></li>
+            <li><a href="https://www.youtube.com/channel/UCFaPzuoXcACu7jplePDfXmA"><i class="fad fa-hospital-user fa-fw"></i> IHU Marseille Youtube Channel</a></li>
+            <li><a href="https://thevaccinereaction.org/vaccination/"><i class="fad fa-syringe fa-fw"></i> The Vaccine Reaction</a></li>
         </ul>
         
     </div>
 
     <div class="grid-item">
 
-        <h3>🎙 Podcasts</h3>
+        <h3><i class="fad fa-microphone-alt fa-fw"></i> Podcasts</h3>
 
     </div>
 
     <div class="grid-item">
 
-        <h3>✊🏽 Anarchism</h3>
+        <h3><i class="fad fa-fist-raised fa-fw"></i> Anarchism</h3>
 
     </div>
 
     <div class="grid-item">
 
-        <h3>🧅 Fun</h3>
+        <h3><i class="fad fa-grin-squint-tears fa-fw"></i> Fun</h3>
 
     </div>
 
