--- a/src/css/main.css
+++ b/src/css/main.css
@@ -47,3 +47,12 @@ a {
     grid-template-columns: auto auto auto;
   }
 }
+
+ul {
+  text-align: left;
+  padding: none;
+}
+
+li {
+  list-style-type: none;
+}
