--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -9,9 +9,9 @@
         <h3><i class="fad fa-newspaper fa-fw"></i> Headlines</h3>
 
         <ul style="text-align: left;">
-            <li><a href="https://www.democracynow.org/"><i class="fad fa-microphone fa-fw"></i> Democracy Now!</a></li>
-            <li><a href="https://www.propublica.org/"><i class="fad fa-search fa-fw"></i> ProPublica</a></li>
-            <li><a href="https://theintercept.com/"><i class="fad fa-satellite-dish fa-fw"></i> The Intercept</a></li>
+            <li><a href="https://www.democracynow.org/"><i class="fad fa-microphone fa-sm fa-fw"></i> Democracy Now!</a></li>
+            <li><a href="https://www.propublica.org/"><i class="fad fa-search fa-sm fa-fw"></i> ProPublica</a></li>
+            <li><a href="https://theintercept.com/"><i class="fad fa-satellite-dish fa-sm fa-fw"></i> The Intercept</a></li>
         </ul>
         
     </div>
@@ -21,11 +21,11 @@
         <h3><i class="fad fa-viruses fa-fw"></i> COVID</h3>
 
         <ul style="text-align: left;">
-            <li><a href="https://www.nature.com/articles/d41586-020-00502-w"><i class="fad fa-leaf fa-fw"></i> COVID Headlines from Nature.com</a></li>
-            <li><a href="https://www.cochranelibrary.com/covid-19"><i class="fad fa-book-medical fa-fw"></i> Cochrane Library</a></li>
-            <li><a href="https://www.mediterranee-infection.com/tout-sur-le-coronavirus/"><i class="fad fa-hospital fa-fw"></i> IHU Marseille Website</a></li>
-            <li><a href="https://www.youtube.com/channel/UCFaPzuoXcACu7jplePDfXmA"><i class="fad fa-hospital-user fa-fw"></i> IHU Marseille Youtube Channel</a></li>
-            <li><a href="https://thevaccinereaction.org/vaccination/"><i class="fad fa-syringe fa-fw"></i> The Vaccine Reaction</a></li>
+            <li><a href="https://www.nature.com/articles/d41586-020-00502-w"><i class="fad fa-leaf fa-sm fa-fw"></i> COVID Headlines from Nature.com</a></li>
+            <li><a href="https://www.cochranelibrary.com/covid-19"><i class="fad fa-book-medical fa-sm fa-fw"></i> Cochrane Library</a></li>
+            <li><a href="https://www.mediterranee-infection.com/tout-sur-le-coronavirus/"><i class="fad fa-hospital fa-sm fa-fw"></i> IHU Marseille Website</a></li>
+            <li><a href="https://www.youtube.com/channel/UCFaPzuoXcACu7jplePDfXmA"><i class="fad fa-hospital-user fa-sm fa-fw"></i> IHU Marseille Youtube Channel</a></li>
+            <li><a href="https://thevaccinereaction.org/vaccination/"><i class="fad fa-syringe fa-sm fa-fw"></i> The Vaccine Reaction</a></li>
         </ul>
         
     </div>
