--- a/src/css/main.css
+++ b/src/css/main.css
@@ -33,7 +33,7 @@ a {
 
 .grid-container {
   display: grid; 
-  grid-column-gap: 10px; 
+  grid-column-gap: 17px; 
 }
 
 @media only screen and (min-width: 500px) and (max-width: 799px) {
@@ -55,4 +55,5 @@ ul {
 
 li {
   list-style-type: none;
+  margin: .2em 0;
 }
