--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 
-<h1>Pop Your News Bubble</h1>
+<h1><i class="fad fa-surprise fa-sm fa-fw"></i> Pop That News Bubble</h1>
 
 <div class="grid-container">
 
@@ -8,7 +8,7 @@
 
         <h3><i class="fad fa-newspaper fa-fw"></i> Headlines</h3>
 
-        <ul style="text-align: left;">
+        <ul>
             <li><a href="https://www.democracynow.org/"><i class="fad fa-microphone fa-sm fa-fw"></i> Democracy Now!</a></li>
             <li><a href="https://www.propublica.org/"><i class="fad fa-search fa-sm fa-fw"></i> ProPublica</a></li>
             <li><a href="https://theintercept.com/"><i class="fad fa-satellite-dish fa-sm fa-fw"></i> The Intercept</a></li>
@@ -20,11 +20,11 @@
 
         <h3><i class="fad fa-viruses fa-fw"></i> COVID</h3>
 
-        <ul style="text-align: left;">
-            <li><a href="https://www.nature.com/articles/d41586-020-00502-w"><i class="fad fa-leaf fa-sm fa-fw"></i> COVID Headlines from Nature.com</a></li>
+        <ul>
+            <li><a href="https://www.nature.com/articles/d41586-020-00502-w"><i class="fad fa-sparkles fa-sm fa-fw"></i> New Research</a></li>
             <li><a href="https://www.cochranelibrary.com/covid-19"><i class="fad fa-book-medical fa-sm fa-fw"></i> Cochrane Library</a></li>
             <li><a href="https://www.mediterranee-infection.com/tout-sur-le-coronavirus/"><i class="fad fa-hospital fa-sm fa-fw"></i> IHU Marseille Website</a></li>
-            <li><a href="https://www.youtube.com/channel/UCFaPzuoXcACu7jplePDfXmA"><i class="fad fa-hospital-user fa-sm fa-fw"></i> IHU Marseille Youtube Channel</a></li>
+            <li><a href="https://www.youtube.com/channel/UCFaPzuoXcACu7jplePDfXmA"><i class="fad fa-hospital-user fa-sm fa-fw"></i> IHU Marseille Youtube</a></li>
             <li><a href="https://thevaccinereaction.org/vaccination/"><i class="fad fa-syringe fa-sm fa-fw"></i> The Vaccine Reaction</a></li>
         </ul>
         
@@ -33,6 +33,29 @@
     <div class="grid-item">
 
         <h3><i class="fad fa-microphone-alt fa-fw"></i> Podcasts</h3>
+
+        <ul>
+            <li>
+                <a href="https://www.patreon.com/badfaithpodcast">
+                    <i class="fad fa-cross fa-rotate-180 fa-sm fa-fw"></i> <strong>Bad Faith</strong> · Briahna Joy Gray & Virgil Texas
+                </a>
+            </li>
+            <li>
+                <a href="https://lady-dont-take-no.simplecast.com/">
+                    <i class="fad fa-traffic-light-stop fa-sm fa-fw"></i> <strong>Lady Don't Take No</strong> · Alicia Garza
+                </a>
+            </li>
+            <li>
+                <a href="https://podcasts.apple.com/us/podcast/the-tight-rope/id1524242837">
+                    <i class="fad fa-lasso fa-sm fa-fw"></i> <strong>The Tight Rope</strong> · Dr. Cornell West & Professor Tricia Rose 
+                </a>
+            </li>
+            <li>
+                <a href="https://congressionaldish.com/">
+                    <i class="fad fa-landmark-alt fa-sm fa-fw"></i> <strong>Congressional Dish</strong> · Jen Briney
+                </a>
+            </li>
+        </ul>
 
     </div>
 
