--- a/site/layouts/_default/baseof.html
+++ b/site/layouts/_default/baseof.html
@@ -12,6 +12,8 @@
     <link href="{{ relURL . }}" rel="stylesheet">
   {{ end }}
   <script src="https://kit.fontawesome.com/4f049b5392.js" crossorigin="anonymous"></script>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap" rel="stylesheet">
 </head>
 
 <body>
