--- a/src/css/main.css
+++ b/src/css/main.css
@@ -22,8 +22,21 @@ body {
   color: white;
 }
 
+h1 {
+  font-family: 'Josefin Sans', sans-serif;
+  color: #f44336;
+  font-size: 3em;
+  font-weight: 400;
+}
+
+h1 .fad {
+  --fa-primary-color: #2196f3;
+  --fa-secondary-color: #f44336;
+  --fa-secondary-opacity: 1;
+}
+
 a {
-  color: pink;
+  color: #f3f3f3;
   text-decoration: none;
 }
 
@@ -33,7 +46,11 @@ a {
 
 .grid-container {
   display: grid; 
-  grid-column-gap: 17px; 
+  grid-column-gap: 30px; 
+}
+
+.grid-item {
+  text-align: left;
 }
 
 @media only screen and (min-width: 500px) and (max-width: 799px) {
@@ -49,18 +66,20 @@ a {
 }
 
 ul {
-  text-align: left;
-  padding: none;
+  padding: 0;
 }
 
 li {
   list-style-type: none;
-  margin: .2em 0;
-  font-size: .9em;
+  margin: .5em 0;
+  font-size: .8em;
 }
 
 h3 {
+  margin-bottom: .5em; 
+  font-family: 'Josefin Sans', sans-serif;
   color: #ffc107;
+  font-weight: 400;
 }
 
 h3 .fad {
@@ -74,7 +93,7 @@ a {
 }
 
 a .fad {
-  --fa-primary-color: #00bcd4;
+  --fa-primary-color: #2196f3;
   --fa-secondary-color: #f44336;
   --fa-secondary-opacity: 1;
 }
