--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -9,9 +9,30 @@
         <h3><i class="fad fa-newspaper fa-fw"></i> Headlines</h3>
 
         <ul>
-            <li><a href="https://www.democracynow.org/"><i class="fad fa-microphone fa-sm fa-fw"></i> Democracy Now!</a></li>
-            <li><a href="https://www.propublica.org/"><i class="fad fa-search fa-sm fa-fw"></i> ProPublica</a></li>
-            <li><a href="https://theintercept.com/"><i class="fad fa-satellite-dish fa-sm fa-fw"></i> The Intercept</a></li>
+            <li>
+                <i class="fad fa-microphone fa-sm fa-fw"></i>
+                <a href="https://www.democracynow.org/">
+                    Democracy Now!
+                </a>
+            </li>
+            <li>
+                <i class="fad fa-search fa-sm fa-fw"></i>
+                <a href="https://www.propublica.org/">
+                    ProPublica
+                </a>
+            </li>
+            <li>
+                <i class="fad fa-satellite-dish fa-sm fa-fw"></i>
+                <a href="https://theintercept.com/">
+                    The Intercept
+                </a>
+            </li>
+            <li>
+                <i class="fad fa-landmark fa-sm fa-fw"></i>
+                <a href="https://theappeal.org/">
+                    The Appeal
+                </a>
+            </li>
         </ul>
         
     </div>
@@ -21,11 +42,30 @@
         <h3><i class="fad fa-viruses fa-fw"></i> COVID</h3>
 
         <ul>
-            <li><a href="https://www.nature.com/articles/d41586-020-00502-w"><i class="fad fa-sparkles fa-sm fa-fw"></i> New Research</a></li>
-            <li><a href="https://www.cochranelibrary.com/covid-19"><i class="fad fa-book-medical fa-sm fa-fw"></i> Cochrane Library</a></li>
-            <li><a href="https://www.mediterranee-infection.com/tout-sur-le-coronavirus/"><i class="fad fa-hospital fa-sm fa-fw"></i> IHU Marseille Website</a></li>
-            <li><a href="https://www.youtube.com/channel/UCFaPzuoXcACu7jplePDfXmA"><i class="fad fa-hospital-user fa-sm fa-fw"></i> IHU Marseille Youtube</a></li>
-            <li><a href="https://thevaccinereaction.org/vaccination/"><i class="fad fa-syringe fa-sm fa-fw"></i> The Vaccine Reaction</a></li>
+            <li>
+                <i class="fad fa-sparkles fa-sm fa-fw"></i>
+                <a href="https://www.nature.com/articles/d41586-020-00502-w">
+                    New Research
+                </a>
+            </li>
+            <li>
+                <i class="fad fa-book-medical fa-sm fa-fw"></i>
+                <a href="https://www.cochranelibrary.com/covid-19">
+                    Cochrane Library
+                </a>
+            </li>
+            <li>
+                <i class="fad fa-hospital-user fa-sm fa-fw"></i>
+                <a href="https://www.youtube.com/channel/UCFaPzuoXcACu7jplePDfXmA">
+                    IHU Marseille Youtube
+                </a>
+            </li>
+            <li>
+                <i class="fad fa-syringe fa-sm fa-fw"></i>
+                <a href="https://thevaccinereaction.org/vaccination/">
+                    The Vaccine Reaction
+                </a>
+            </li>
         </ul>
         
     </div>
@@ -36,23 +76,27 @@
 
         <ul>
             <li>
+                <i class="fad fa-cross fa-rotate-180 fa-sm fa-fw"></i>
                 <a href="https://www.patreon.com/badfaithpodcast">
-                    <i class="fad fa-cross fa-rotate-180 fa-sm fa-fw"></i> <strong>Bad Faith</strong> · Briahna Joy Gray & Virgil Texas
+                    <strong>Bad Faith</strong> · Briahna Joy Gray & Virgil Texas
                 </a>
             </li>
             <li>
+                <i class="fad fa-traffic-light-stop fa-sm fa-fw"></i>
                 <a href="https://lady-dont-take-no.simplecast.com/">
-                    <i class="fad fa-traffic-light-stop fa-sm fa-fw"></i> <strong>Lady Don't Take No</strong> · Alicia Garza
+                    <strong>Lady Don't Take No</strong> · Alicia Garza
                 </a>
             </li>
             <li>
+                <i class="fad fa-lasso fa-sm fa-fw"></i>
                 <a href="https://podcasts.apple.com/us/podcast/the-tight-rope/id1524242837">
-                    <i class="fad fa-lasso fa-sm fa-fw"></i> <strong>The Tight Rope</strong> · Dr. Cornell West & Professor Tricia Rose 
+                    <strong>The Tight Rope</strong> · Dr. Cornell West & Professor Tricia Rose 
                 </a>
             </li>
             <li>
+                <i class="fad fa-landmark-alt fa-sm fa-fw"></i>
                 <a href="https://congressionaldish.com/">
-                    <i class="fad fa-landmark-alt fa-sm fa-fw"></i> <strong>Congressional Dish</strong> · Jen Briney
+                    <strong>Congressional Dish</strong> · Jen Briney
                 </a>
             </li>
         </ul>
