--- a/src/css/main.css
+++ b/src/css/main.css
@@ -72,10 +72,11 @@ ul {
 li {
   list-style-type: none;
   margin: .5em 0;
-  font-size: .8em;
+  font-size: .9em;
 }
 
 h3 {
+  font-size: 1.5em;
   margin-bottom: .5em; 
   font-family: 'Josefin Sans', sans-serif;
   color: #ffc107;
@@ -89,10 +90,17 @@ h3 .fad {
 }
 
 a {
-  color: #65dfef;
+  color: #d0d0d0;
 }
 
-a .fad {
+a:hover {
+  text-decoration: underline;
+  text-decoration-color: #2196f3;
+  text-decoration-thickness: 2px;
+}
+
+li .fad {
+  margin-right: .1em;
   --fa-primary-color: #2196f3;
   --fa-secondary-color: #f44336;
   --fa-secondary-opacity: 1;
