--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -78,25 +78,29 @@
             <li>
                 <i class="fad fa-cross fa-rotate-180 fa-sm fa-fw"></i>
                 <a href="https://www.patreon.com/badfaithpodcast">
-                    <strong>Bad Faith</strong> · Briahna Joy Gray & Virgil Texas
+                    <strong>Bad Faith</strong><br>
+                    <span style="padding-left: 1.5em;">Briahna Joy Gray & Virgil Texas</span>
                 </a>
             </li>
             <li>
                 <i class="fad fa-traffic-light-stop fa-sm fa-fw"></i>
                 <a href="https://lady-dont-take-no.simplecast.com/">
-                    <strong>Lady Don't Take No</strong> · Alicia Garza
+                    <strong>Lady Don't Take No</strong><br>
+                    <span style="padding-left: 1.5em;">Alicia Garza</span>
                 </a>
             </li>
             <li>
                 <i class="fad fa-lasso fa-sm fa-fw"></i>
                 <a href="https://podcasts.apple.com/us/podcast/the-tight-rope/id1524242837">
-                    <strong>The Tight Rope</strong> · Dr. Cornell West & Professor Tricia Rose 
+                    <strong>The Tight Rope</strong><br>
+                    <span style="padding-left: 1.5em;">Dr. Cornell West & Professor Tricia Rose </span>
                 </a>
             </li>
             <li>
                 <i class="fad fa-landmark-alt fa-sm fa-fw"></i>
                 <a href="https://congressionaldish.com/">
-                    <strong>Congressional Dish</strong> · Jen Briney
+                    <strong>Congressional Dish</strong><br>
+                    <span style="padding-left: 1.5em;">Jen Briney</span>
                 </a>
             </li>
         </ul>
