--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -109,8 +109,17 @@
 
     <div class="grid-item">
 
-        <h3><i class="fad fa-fist-raised fa-fw"></i> Anarchism</h3>
+        <h3><i class="fad fa-hands-helping fa-fw"></i> Anarchism</h3>
 
+        <ul>
+            <li>
+                <i class="fad fa-books fa-rotate-180 fa-sm fa-fw"></i>
+                <a href="https://theanarchistlibrary.org/special/index">
+                    The Anarchist Library
+                </a>
+            </li>
+        </ul>
+        
     </div>
 
     <div class="grid-item">
