--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -4,7 +4,7 @@
 
 <div class="grid-container">
 
-    <div class="grid-item">
+    <div class="grid-item" style="background: #393e47;">
 
         <h3><i class="fad fa-newspaper fa-fw"></i> Headlines</h3>
 
@@ -70,7 +70,7 @@
         
     </div>
 
-    <div class="grid-item">
+    <div class="grid-item" style="background: #393e47;">
 
         <h3><i class="fad fa-microphone-alt fa-fw"></i> Podcasts</h3>
 
@@ -122,9 +122,36 @@
         
     </div>
 
-    <div class="grid-item">
+    <div class="grid-item" style="background: #393e47;">
 
         <h3><i class="fad fa-grin-squint-tears fa-fw"></i> Fun</h3>
+
+        <ul>
+            <li>
+                <i class="fad fa-onion fa-rotate-180 fa-sm fa-fw"></i>
+                <a href="https://www.theonion.com/">
+                    The Onion
+                </a>
+            </li>
+            <li>
+                <i class="fad fa-chair fa-rotate-180 fa-sm fa-fw"></i>
+                <a href="https://www.mcsweeneys.net/">
+                    McSweeney's Internet Tendency
+                </a>
+            </li>
+            <li>
+                <i class="fad fa-hand-middle-finger fa-rotate-180 fa-sm fa-fw"></i>
+                <a href="https://twitter.com/thefingnews?lang=en">
+                    The Fucking News
+                </a>
+            </li>
+            <li>
+                <i class="fad fa-eye fa-rotate-180 fa-sm fa-fw"></i>
+                <a href="https://www.private-eye.co.uk/">
+                    Private Eye
+                </a>
+            </li>
+        </ul>
 
     </div>
 
