More updates all around.

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 
-<h1><i class="fad fa-surprise fa-sm fa-fw"></i> Pop That News Bubble</h1>
+<h1><i class="fad fa-surprise fa-sm fa-fw"></i> <br> Pop That News Bubble</h1>
 
 <div class="grid-container">
 
@@ -28,13 +28,78 @@
                 </a>
             </li>
             <li>
+                <i class="fad fa-typewriter fa-sm fa-fw"></i>
+                <a href="https://www.dailyposter.com/">
+                    The Daily Poster
+                </a>
+            </li>
+            <li>
                 <i class="fad fa-landmark fa-sm fa-fw"></i>
                 <a href="https://theappeal.org/">
                     The Appeal
                 </a>
             </li>
+            <li>
+                <i class="fad fa-flag-usa fa-sm fa-fw"></i>
+                <a href="https://www.thenation.com/">
+                    The Nation
+                </a>
+            </li>
+            <li>
+                <i class="fad fa-fist-raised fa-sm fa-fw"></i>
+                <a href="https://www.bostonglobe.com/opinion/the-emancipator/">
+                    The Emancipator
+                </a>
+            </li>
         </ul>
         
+    </div>
+
+    <div class="grid-item">
+        <!-- start sw-rss-feed code --> 
+        <script type="text/javascript"> 
+            <!-- 
+            rssfeed_url = new Array(); 
+            rssfeed_url[0]="https://www.democracynow.org/democracynow.rss";  
+            rssfeed_frame_width="100%"; 
+            rssfeed_frame_height="300"; 
+            rssfeed_scroll="on"; 
+            rssfeed_scroll_step="6"; 
+            rssfeed_scroll_bar="off"; 
+            rssfeed_target="_blank"; 
+            rssfeed_font_size="1em"; 
+            rssfeed_font_face=""; 
+            rssfeed_border="off"; 
+            rssfeed_title="on"; 
+            rssfeed_title_name="DemocracyNow! Headlines"; 
+            rssfeed_title_bgcolor=""; 
+            rssfeed_title_color="#ffc107"; 
+            rssfeed_title_bgimage=""; 
+            rssfeed_footer="off"; 
+            rssfeed_footer_name="rss feed"; 
+            rssfeed_footer_bgcolor="#fff"; 
+            rssfeed_footer_color="#333"; 
+            rssfeed_footer_bgimage=""; 
+            rssfeed_item_title_length="50"; 
+            rssfeed_item_title_color="#d0d0d0"; 
+            rssfeed_item_bgcolor=""; 
+            rssfeed_item_bgimage=""; 
+            rssfeed_item_border_bottom="off"; 
+            rssfeed_item_source_icon="off"; 
+            rssfeed_item_date="on"; 
+            rssfeed_item_description="on"; 
+            rssfeed_item_description_length="120"; 
+            rssfeed_item_description_color="#eee"; 
+            rssfeed_item_description_link_color="#d0d0d0"; 
+            rssfeed_item_description_tag="off"; 
+            rssfeed_no_items="0"; 
+            rssfeed_cache = "21874b1ce98e2dedad9218052e9b4748"; 
+            //--> 
+        </script> 
+        <script type="text/javascript" src="//feed.surfing-waves.com/js/rss-feed.js"></script> 
+        <!-- The link below helps keep this service FREE, and helps other people find the SW widget. Please be cool and keep it! Thanks. --> 
+        <div style="font-size:.8em; text-align:right;">powered by <a href="https://surfing-waves.com" rel="noopener" target="_blank">Surfing Waves</a></div> 
+        <!-- end sw-rss-feed code -->
     </div>
 
     <div class="grid-item">
@@ -79,28 +144,42 @@
                 <i class="fad fa-cross fa-rotate-180 fa-sm fa-fw"></i>
                 <a href="https://www.patreon.com/badfaithpodcast">
                     <strong>Bad Faith</strong><br>
-                    <span style="padding-left: 1.5em;">Briahna Joy Gray & Virgil Texas</span>
+                    <span style="padding-left: 1.85em; font-size: .8em">Briahna Joy Gray & Virgil Texas</span>
                 </a>
             </li>
             <li>
                 <i class="fad fa-traffic-light-stop fa-sm fa-fw"></i>
                 <a href="https://lady-dont-take-no.simplecast.com/">
                     <strong>Lady Don't Take No</strong><br>
-                    <span style="padding-left: 1.5em;">Alicia Garza</span>
+                    <span style="padding-left: 1.85em; font-size: .8em">Alicia Garza</span>
                 </a>
             </li>
             <li>
                 <i class="fad fa-lasso fa-sm fa-fw"></i>
                 <a href="https://podcasts.apple.com/us/podcast/the-tight-rope/id1524242837">
                     <strong>The Tight Rope</strong><br>
-                    <span style="padding-left: 1.5em;">Dr. Cornell West & Professor Tricia Rose </span>
+                    <span style="padding-left: 1.85em; font-size: .8em">Dr. Cornell West & Professor Tricia Rose </span>
                 </a>
             </li>
             <li>
                 <i class="fad fa-landmark-alt fa-sm fa-fw"></i>
                 <a href="https://congressionaldish.com/">
                     <strong>Congressional Dish</strong><br>
-                    <span style="padding-left: 1.5em;">Jen Briney</span>
+                    <span style="padding-left: 1.85em; font-size: .8em">Jen Briney</span>
+                </a>
+            </li>
+            <li>
+                <i class="fad fa-satellite fa-sm fa-fw"></i>
+                <a href="https://theintercept.com/podcasts/intercepted/">
+                    <strong>Intercepted</strong><br>
+                    <span style="padding-left: 1.85em; font-size: .8em">Jeremy Scahill</span>
+                </a>
+            </li>
+            <li>
+                <i class="fad fa-space-station-moon-alt fa-sm fa-fw"></i>
+                <a href="https://theintercept.com/podcasts/deconstructed/">
+                    <strong>Deconstructed</strong><br>
+                    <span style="padding-left: 1.85em; font-size: .8em">Ryan Grim</span>
                 </a>
             </li>
         </ul>
@@ -128,27 +207,33 @@
 
         <ul>
             <li>
-                <i class="fad fa-onion fa-rotate-180 fa-sm fa-fw"></i>
+                <i class="fad fa-grin-squint fa-sm fa-fw"></i>
                 <a href="https://www.theonion.com/">
                     The Onion
                 </a>
             </li>
             <li>
-                <i class="fad fa-chair fa-rotate-180 fa-sm fa-fw"></i>
+                <i class="fad fa-chair fa-sm fa-fw"></i>
                 <a href="https://www.mcsweeneys.net/">
-                    McSweeney's Internet Tendency
+                    McSweeney's
                 </a>
             </li>
             <li>
-                <i class="fad fa-hand-middle-finger fa-rotate-180 fa-sm fa-fw"></i>
+                <i class="fad fa-hand-middle-finger fa-sm fa-fw"></i>
                 <a href="https://twitter.com/thefingnews?lang=en">
                     The Fucking News
                 </a>
             </li>
             <li>
-                <i class="fad fa-eye fa-rotate-180 fa-sm fa-fw"></i>
+                <i class="fad fa-eye fa-sm fa-fw"></i>
                 <a href="https://www.private-eye.co.uk/">
                     Private Eye
+                </a>
+            </li>
+            <li>
+                <i class="fad fa-octopus-deploy fa-sm fa-fw"></i>
+                <a href="https://www.dailysquib.co.uk/">
+                    The Daily Squid
                 </a>
             </li>
         </ul>
