--- a/src/css/main.css
+++ b/src/css/main.css
@@ -111,3 +111,7 @@ li .fad {
   font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
   line-height: 1.3;
 }
+
+.rss-feed {
+  grid-column: 1 / 4;
+}
