--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -6,7 +6,7 @@
 
     <div class="grid-item" style="background: #393e47;">
 
-        <h3><i class="fad fa-newspaper fa-fw"></i> Dailies</h3>
+        <h3><i class="fad fa-newspaper fa-fw"></i> The Powerhouses</h3>
 
         <ul>
             <li>
@@ -28,12 +28,6 @@
                 </a>
             </li>
             <li>
-                <i class="fad fa-typewriter fa-sm fa-fw"></i>
-                <a href="https://www.dailyposter.com/">
-                    The Daily Poster
-                </a>
-            </li>
-            <li>
                 <i class="fad fa-landmark fa-sm fa-fw"></i>
                 <a href="https://theappeal.org/">
                     The Appeal
@@ -45,10 +39,34 @@
                     The Nation
                 </a>
             </li>
+        </ul>
+        
+    </div>
+
+    <div class="grid-item">
+
+        <h3><i class="fad fa-user-secret fa-fw"></i> The Journalists</h3>
+
+        <ul>
+            <li>
+                <i class="fad fa-typewriter fa-sm fa-fw"></i>
+                <a href="https://www.dailyposter.com/">
+                    <strong>The Daily Poster</strong><br>
+                    <span style="padding-left: 1.85em; font-size: .8em">David Sirota</span>
+                </a>
+            </li>
             <li>
                 <i class="fad fa-fist-raised fa-sm fa-fw"></i>
                 <a href="https://www.bostonglobe.com/opinion/the-emancipator/">
-                    The Emancipator
+                    <strong>The Emancipator</strong><br>
+                    <span style="padding-left: 1.85em; font-size: .8em">Ibram X. Kendi</span>
+                </a>
+            </li>
+            <li>
+                <i class="fad fa-fist-raised fa-sm fa-fw"></i>
+                <a href="https://the.ink/">
+                    <strong>The Ink</strong><br>
+                    <span style="padding-left: 1.85em; font-size: .8em">Anand Giridharadas</span>
                 </a>
             </li>
         </ul>
@@ -57,7 +75,7 @@
 
     <div class="grid-item">
 
-        <h3><i class="fad fa-viruses fa-fw"></i> COVID</h3>
+        <h3><i class="fad fa-viruses fa-fw"></i> COVID Stuff</h3>
 
         <ul>
             <li>
@@ -184,7 +202,7 @@
                 </a>
             </li>
             <li>
-                <i class="fad fa-octopus-deploy fa-sm fa-fw"></i>
+                <i class="fab fa-octopus-deploy fa-sm fa-fw"></i>
                 <a href="https://www.dailysquib.co.uk/">
                     The Daily Squid
                 </a>
@@ -193,7 +211,7 @@
 
     </div>
 
-    <div class="grid-item rss-feeds">
+    <div class="grid-item" style="grid-column: 1 / 4;">
 
         <h3><i class="fad fa-rss fa-fw"></i> Headlines</h3>
     
