--- a/src/css/main.css
+++ b/src/css/main.css
@@ -108,10 +108,6 @@ li .fad {
 
 .feed-container {
   font-size: 1em !important;
-  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
-  line-height: 1.3;
-}
-
-.rss-feed {
-  grid-column: 1 / 4;
+  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif !important;
+  line-height: 1.3 !important;
 }
