--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -63,7 +63,7 @@
                 </a>
             </li>
             <li>
-                <i class="fad fa-fist-raised fa-sm fa-fw"></i>
+                <i class="fad fa-splotch fa-sm fa-fw"></i>
                 <a href="https://the.ink/">
                     <strong>The Ink</strong><br>
                     <span style="padding-left: 1.85em; font-size: .8em">Anand Giridharadas</span>
@@ -213,7 +213,7 @@
 
     <div class="grid-item" style="grid-column: 1 / 4;">
 
-        <h3><i class="fad fa-rss fa-fw"></i> Headlines</h3>
+        <h3><i class="fad fa-rss fa-fw"></i> Headlines: DN! · ProPublica</h3>
     
         <!-- start sw-rss-feed code --> 
         <script type="text/javascript"> 
@@ -225,10 +225,10 @@
             rssfeed_frame_height=""; 
             rssfeed_scroll="off"; 
             rssfeed_scroll_step="6"; 
-            rssfeed_scroll_bar="off"; 
+            rssfeed_scroll_bar="on"; 
             rssfeed_target="_blank"; 
             rssfeed_font_size="1em"; 
-            rssfeed_font_face=""; 
+            rssfeed_font_face="-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif"; 
             rssfeed_border="off"; 
             rssfeed_title="off"; 
             rssfeed_title_name=''; 
