--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -56,10 +56,10 @@
                 </a>
             </li>
             <li>
-                <i class="fad fa-fist-raised fa-sm fa-fw"></i>
-                <a href="https://www.bostonglobe.com/opinion/the-emancipator/">
-                    <strong>The Emancipator</strong><br>
-                    <span style="padding-left: 1.85em; font-size: .8em">Ibram X. Kendi</span>
+                <i class="fad fa-dog fa-sm fa-fw"></i>
+                <a href="https://greenwald.substack.com/">
+                    <strong>Glenn Greenwald Substack</strong><br>
+                    <span style="padding-left: 1.85em; font-size: .8em">Glenn Greenwald</span>
                 </a>
             </li>
             <li>
@@ -67,6 +67,13 @@
                 <a href="https://the.ink/">
                     <strong>The Ink</strong><br>
                     <span style="padding-left: 1.85em; font-size: .8em">Anand Giridharadas</span>
+                </a>
+            </li>
+            <li>
+                <i class="fad fa-fist-raised fa-sm fa-fw"></i>
+                <a href="https://www.bostonglobe.com/opinion/the-emancipator/">
+                    <strong>The Emancipator</strong><br>
+                    <span style="padding-left: 1.85em; font-size: .8em">Ibram X. Kendi</span>
                 </a>
             </li>
         </ul>
@@ -222,7 +229,7 @@
             rssfeed_url[0]="https://www.democracynow.org/democracynow.rss";  
             rssfeed_url[1]="http://feeds.propublica.org/propublica/main";  
             rssfeed_frame_width="100%"; 
-            rssfeed_frame_height=""; 
+            rssfeed_frame_height="fit-content"; 
             rssfeed_scroll="off"; 
             rssfeed_scroll_step="6"; 
             rssfeed_scroll_bar="on"; 
