--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -1,8 +1,12 @@
 {{ define "main" }}
 
-<h1><i class="fad fa-surprise fa-sm fa-fw"></i> <br> Pop That News Bubble</h1>
-
 <div class="grid-container">
+
+    <div class="grid-item" style="grid-column: 1 / 4;">
+
+        <h1><i class="fad fa-surprise fa-sm fa-fw"></i> <br> Pop That News Bubble</h1>
+
+    </div>
 
     <div class="grid-item" style="background: #393e47;">
 
@@ -270,7 +274,5 @@
     </div>
     
 </div>
-
-
 
 {{ end }}
