--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -232,6 +232,7 @@
             rssfeed_url = new Array(); 
             rssfeed_url[0]="https://www.democracynow.org/democracynow.rss";  
             rssfeed_url[1]="http://feeds.propublica.org/propublica/main";  
+            rssfeed_url[2]="https://theanarchistlibrary.org/feed";
             rssfeed_frame_width="100%"; 
             rssfeed_frame_height="fit-content"; 
             rssfeed_scroll="off"; 
